# alldecays

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  internal_to_physics_errors.ipynb  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  pre-commit.yml  tests.yml
example/LCWS2021/: LCWS.ipynb  README.md
example/LCWS2021/data/: default.csv  highly_correlated.csv  overlay_free.csv  overlay_free_higher_stats.csv
example/higgs_ILD/: fit_example.ipynb  higgs_couplings_external.py  higgs_data_setup.py  likelihood_comparison.ipynb  toy_study_extended.ipynb
example/higgs_ILD/data/: v06_fake_bkg.csv  v06_no_overlay.csv
src/alldecays/: __init__.py  exceptions.py  version.py
src/alldecays/data_handling/: __init__.py  abstract_data_set.py  combined_data_set.py  data_channel.py  data_set.py  pure_data_channel.py  util.py
src/alldecays/fitting/: __init__.py  fit.py  toy_values.py
src/alldecays/fitting/plugins/: __init__.py  abstract_fit_plugin.py  binomial_least_squares.py  gaussian_least_squares.py  poisson.py
src/alldecays/plotting/: __init__.py  all_plots.py
src/alldecays/plotting/channel/: __init__.py  box_counts.py  matrix_plots.py
src/alldecays/plotting/fit/: __init__.py  correlations_plot.py
tests/: conftest.py  test_data_handling.py  test_fitting.py  test_plotting.py  test_plotting_channel.py  test_plotting_fit.py  test_plotting_toys.py  test_setup.py  test_toys.py
tests/data/: recreate_test_data.py
tests/data/unpolarized/: channel1.csv  channel2.csv
(+19 files in other folders)
