[bdist_wheel]
universal=1

[metadata]
name = alldecays
author = Jonas KUNATH
author_email = kunath@llr.in2p3.fr
url = https://github.com/LLR-ILD/alldecays
description : Python implementation of an exhaustive HEP decay analysis.
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    iminuit
    matplotlib
    numpy>=1.18
    pandas
    scipy
    tqdm
# end_install_requires. Do not remove. Line used in tests.

[options.packages.find]
where = src


[flake8]
# E203: whitespace before ':'
# E402: module level import not at top of file
# E501: line too long
extend-ignore = E203, E402, E501
max-line-length = 88
count = True
statistics = True
